Fix too much mt on smartphones

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -86,6 +86,9 @@ label {
     background-image: url("../img/home-background-cards.svg");
     background-size: 400px;
   }
+  .mt-md-7 {
+    margin-top: 7rem !important;
+  }
 }
 @media (min-width: 1200px) {
   .bg-home {
